<resources>
    <string name="app_name">RocoTock</string>
    <string name="title_activity_test">Test</string>

    <string name="caption">Описание</string>
    <string name="start_time">Выберите дату начала</string>
    <string name="end_time">Выберите дату окончания</string>
    <string name="priority">Выберите приоритет:</string>
    <string name="insert">Добавить</string>
    <string name="search">Найти</string>
    <string name="delete_all_task">Удалить все задачи</string>
    <string name="delete_all_info">Удалить все данные</string>
    <string name="delete">Удалить</string>
    <string name="CurrentNode">Показать текущие задачи</string>
    <string name="CompletedNode">Показать выполненые задачи</string>
    <string name="LostNode">Показать невыполненые задачи</string>
    <string name="AllNode">Показать все задачи</string>
    <string name="Calendar">Календарь</string>
    <string name="Personal_Account">Статистика</string>
    <string name="Other">Прочее</string>
    <string name="personal_info">Изменить личную информацию</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RocoTock</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="account">Аккаунт</string>
    <string name="settings">Настройки</string>
    <string name="create_or_choose_tag">Создайте или выберите метку</string>
    <string name="progress">Прогресс выполнения:</string>
    <string name="mark">Метка:</string>
    <string name="next">Дальше</string>
    <string name="Statistic">Статистика</string>
    <string name="Tasks">Задачи</string>
    <string name="Goals">Цели</string>
    <string name="Advices">Cоветы</string>
</resources>
