<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TasksLogic.TaskRecordEdit">

    <include
            android:id="@+id/tre_toolbar_bottom"
            layout="@layout/toolbar_bottom"
    />

    <include
            android:id="@+id/tre_toolbar_default"
            layout="@layout/toolbar_default"
    />

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/tre_fab_editStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/img_edit" android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/tre_toolbar_bottom"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/tre_fab_editEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/img_done" android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/tre_toolbar_bottom"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/tre_toolbar_default"
            app:layout_constraintBottom_toTopOf="@+id/tre_toolbar_bottom" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_margin="@dimen/custom_margin"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/tse_editText_caption"
                    android:enabled="false"
                    android:hint="@string/caption" tools:ignore="Autofill"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tse_editText_start_time"
                    android:textAlignment="center"
                    android:hint="@string/start_time"
                    android:enabled="false"
                    android:editable="false"
                    android:inputType="none"
                    android:clickable="false"
                    android:drawableStart="@drawable/img_calendar" tools:ignore="Autofill"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:id="@+id/tse_editText_end_time"
                    android:textAlignment="center"
                    android:hint="@string/end_time"
                    android:editable="false"
                    android:inputType="none"
                    android:clickable="false"
                    android:drawableStart="@drawable/img_calendar" tools:ignore="Autofill"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t1"/>
            <Spinner
                    android:layout_width="match_parent" android:enabled="false"
                    android:layout_height="wrap_content" android:id="@+id/tse_prioritySpinner"
            />
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv2"
                    android:textAllCaps="false"/>
            <Spinner
                    android:layout_width="match_parent" android:enabled="false"
                    android:layout_height="wrap_content" android:id="@+id/tse_statusSpinner"
            />
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv3"
                    android:textAllCaps="false"/>
            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:ems="10"
                    android:completionThreshold="1"
                    android:id="@+id/tse_editText_setTag"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:inputType="textPersonName" android:enabled="false"
                    tools:ignore="LabelFor"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="Цель:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv4"
                    android:textAllCaps="false"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tre_goalspinner"
                    android:spinnerMode="dialog"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"/>
            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tse_progressBar" android:max="100"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tse_textView_progressBar" tools:text="10 %"
                    android:textAlignment="viewEnd" android:layout_marginEnd="@dimen/custom_margin"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tre_seekBar" android:max="100"
                    tools:visibility="invisible" android:progress="0"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tre_textView_seekBar"
                    tools:text="10 %" android:textAlignment="viewEnd" android:layout_marginEnd="@dimen/custom_margin"
                    tools:visibility="invisible"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="80dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>