<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TasksLogic.TaskRecordCreate">

    <include
            android:id="@+id/trc_toolbar_bottom"
            layout="@layout/toolbar_bottom"/>

    <include
            android:id="@+id/trc_toolbar_default"
            layout="@layout/toolbar_default"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/trc_toolbar_bottom"
            app:layout_constraintTop_toBottomOf="@+id/trc_toolbar_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/trc_editText_caption"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:hint="@string/caption"
                    android:inputType="textPersonName"
                    android:layout_marginTop="8dp"
                    tools:ignore="Autofill"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/trc_editText_start_time"
                    android:layout_marginStart="@dimen/custom_margin"
                    android:textColorHighlight="@color/colorPrimary"
                    android:editable="false"
                    android:inputType="none"
                    android:clickable="false"
                    android:textAlignment="center"
                    android:focusableInTouchMode="false"
                    android:hint="@string/start_time"
                    android:drawableStart="@drawable/img_calendar"
                    android:layout_marginEnd="@dimen/custom_margin"
                    tools:ignore="Autofill"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/trc_editText_endtime"
                    android:layout_marginStart="@dimen/custom_margin"
                    android:textColorHighlight="@color/colorPrimary"
                    android:editable="false"
                    android:inputType="none"
                    android:clickable="false"
                    android:textAlignment="center"
                    android:focusableInTouchMode="false"
                    android:hint="@string/end_time"
                    android:drawableStart="@drawable/img_calendar"
                    android:layout_marginEnd="@dimen/custom_margin"
                    tools:ignore="Autofill"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_margin"
                    android:id="@+id/trc_tv1"
                    android:layout_marginEnd="@dimen/custom_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/priority"/>
            <Spinner
                    android:id="@+id/trc_taskSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:spinnerMode="dialog"
                    android:labelFor="@id/trc_tv1"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:ems="10"
                    android:completionThreshold="1"
                    android:id="@+id/trc_editText_tag"
                    android:layout_marginEnd="@dimen/custom_margin"
                    android:layout_marginStart="@dimen/custom_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:hint="@string/create_or_choose_tag"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/img_search"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_margin"
                    android:id="@+id/tv_priority2"
                    android:layout_marginEnd="@dimen/custom_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="Прикрепите к цели:"/>
            <Spinner
                    android:id="@+id/trc_goalSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:spinnerMode="dialog"
                    android:labelFor="@id/trc_tv1"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/trc_fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/img_done"
            app:layout_constraintBottom_toTopOf="@+id/trc_toolbar_bottom"/>

</android.support.constraint.ConstraintLayout>